updating the userChrome.css and seen that the userChrome.css is working and moving the app.fish to the path of nix config fixing the multiple lines debuging what is happening behind the scenes time 3

--- a/modules/HM/BigPackConfigs/userChrome.css
+++ b/modules/HM/BigPackConfigs/userChrome.css
@@ -6,7 +6,7 @@
     --c-surface0: var(--tab-selected-bgcolor);
     --c-surface1: var(--arrowpanel-border-color);
 
-    --background: var(--c-surface0) !important;
+    --primary: var(--c-surface0) !important;
     --zen-colors-primary: var(--c-accent) !important;
     --zen-colors-secondary: var(--c-surface0) !important;
     --zen-colors-tertiary: var(--c-base) !important;
@@ -70,7 +70,7 @@ tooltip {
 }
 
 toolbarbutton {
-    fill: var(--background) !important;
+    fill: var(--primary) !important;
 }
 
 toolbar .toolbarbutton-1 {
